deploy/argo-sailingapp/base/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sailingapp-api
  labels:
    kubernetes.io/name: sailingapp-api
spec:
  replicas: 1
  selector:
    matchLabels:
      kubernetes.io/name: sailingapp-api
  template:
    metadata:
      labels:
        kubernetes.io/name: sailingapp-api
        kubernetes.io/language: go
    spec:
      containers:

        - name: nginx
          image: nginx:alpine
          ports: 
            - containerPort: 8080
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
          resources:
            requests:
              memory: "20Mi"

        - name: sailingapp-api
          image: ilaverlin/yas-restapi:latest
          ports:
            - containerPort: 8989
      volumes:
        - name: nginx-config
          configMap:
            name: sailingapp-nginx
