deploy/argo-sailingapp/base/deployment-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sailingapp-bot
  namespace: sailingapp
  labels:
    kubernetes.io/name: sailingapp-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      kubernetes.io/name: sailingapp-bot
  template:
    metadata:
      labels:
        kubernetes.io/name: sailingapp-bot
    spec:
      containers:
        - name: sailingapp-bot
          image: ilaverlin/yas-bot:latest
          startupProbe:
            httpGet:
              path: /health/ready
              port: 80
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /health/live
              port: 80
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
