deploy/argo-sailingapp/base/deployment-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sailingapp-processor
  labels:
    kubernetes.io/name: sailingapp-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      kubernetes.io/name: sailingapp-processor
  template:
    metadata:
      labels:
        kubernetes.io/name: sailingapp-processor
        kubernetes.io/language: go
    spec:
      containers:
        - name: sailingapp-processor
          image: ilaverlin/yas-processor:latest
