deploy/argo-sailingapp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sailingapp
  namespace: sailingapp
  labels:
    kubernetes.io/name: sailingapp
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    kubernetes.io/name: sailingapp-api
