deploy/argo-sailingapp/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sailingapp
  namespace: watchface
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(``) && PathPrefix(`/yas-api/`) 
      kind: Rule
      services:
        - name: sailingapp
          port: 8080
          namespace: sailingapp
  tls:
    secretName: watchface-tls
